<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MonthView!</string>
    <string name="app_name">Monkey Calendar</string>
    <!-- Month -->
    <string name="Month">Month</string>
    <string-array name="Month">
        <item>January</item>
    	<item>February</item>
    	<item>March</item>
    	<item>April</item>
    	<item>May</item>
    	<item>June</item>
    	<item>July</item>
    	<item>August</item>
    	<item>September</item>
    	<item>October</item>
    	<item>November</item>
    	<item>December</item>
    </string-array>
    <string-array name="MonthShort">
        <item>Jan</item>
    	<item>Feb</item>
    	<item>Mar</item>
    	<item>Apr</item>
    	<item>May</item>
    	<item>Jun</item>
    	<item>Jul</item>
    	<item>Aug</item>
    	<item>Sep</item>
    	<item>Oct</item>
    	<item>Nov</item>
    	<item>Dec</item>
    </string-array>
	
	<!-- Week -->
	<string name="Week">Week</string>
	<string-array name="Week">
    	<item>Sunday</item>
	    <item>Monday</item>
	    <item>Tuesday</item>
	    <item>Wednesday</item>
	    <item>Thursday</item>
	    <item>Friday</item>
	    <item>Saturday</item>
    </string-array>
    <string name="W1">Sunday</string>
    <string name="W2">Monday</string>
    <string name="W3">Tuesday</string>
    <string name="W4">Wednesday</string>
    <string name="W5">Thursday</string>
    <string name="W6">Friday</string>
    <string name="W7">Saturday</string>
    
    <string name="Show_week_view">Week view</string>
    
    <!-- Memo & Appointment common string -->
    <string name="LastUpdate">Last Update :</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    
    <string name="No_memo">No memos</string>
    <string name="Add_memo">Add memo</string>
    <string name="Add_appo">Add appointment</string>
    
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    
    <!-- Memo string -->
    <string name="MemoList">Memo List</string>
    <string name="NextWeek">Next week</string>
    <string name="PrevWeek">Previous week</string>
    
    <!-- Appointment strings -->
    <string name="RepeatAppointment">Repeat</string>
    <string name="RepeatNo">No</string>
    <string name="RepeatYearly">Yearly</string>
    <string name="RepeatMonthly">Monthly</string>
    <string name="RepeatWeekly">Weekly</string>
    <string name="RepeatDaily">Daily</string>
    
    <string name="MsgClearTitle">Remove all</string>
    <string name="MsgClear">Do you really want to clear all appointment?</string>
    
    <string name="ClearAllAppointments">Clear all appointments</string>
    
    <!-- Days strings -->
    <string name="DaysImport">Import holiday DB to local</string>
    
    <!-- Fun stuff strings -->
    <string name="name">Name</string>
    <string name="No_name">No name</string>
    <string name="Birthday">Birthday</string>
    <string name="Set_preference">Preference</string>
    <string name="MsgWeather">Weather</string>
    <string name="UriWeather">http://m.weather.naver.com/m/crntWetr.nhn</string>
    
    <string name="MsgBio">Biorhythm</string>
    <string name="UriBio1">http://www.60gabja.com/bio/013_modujobio.php3?birth_year=</string>
    <string name="UriBio2">&amp;birth_month=</string>
    <string name="UriBio3">&amp;birth_day=</string>
    
    <string name="MsgFortune">Fortune</string>
    <string name="UriFor">http://www.unselove.net/saju/unsetoday.php#</string>
    <string-array name="Ddi">
		<item>원숭이</item>
		<item>닭</item>
		<item>개</item>
		<item>돼지</item>
		<item>쥐</item>
		<item>소</item>
		<item>호랑이</item>
		<item>토끼</item>
		<item>용</item>
		<item>뱀</item>
		<item>말</item>
		<item>양</item>
    </string-array>
    
</resources>
