<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
  		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
	  		<!--Title Edit box-->
		    <TextView 
		    	android:id="@+id/textViewAppointmentEditTitle"
				android:layout_width="fill_parent" 
				android:text="@string/Title"
				android:layout_height="wrap_content"></TextView>
		    <EditText 
		    	android:id="@+id/editTextAppointmentEditTitle"
		    	android:text="" 
		    	android:textSize="20px"
		    	android:singleLine="true" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
		    
		    <!--Participant and Location Edit box-->
		    <LinearLayout android:id="@+id/layoutAppointmentPartLoca" 
		    	android:orientation="vertical" android:layout_gravity="center_vertical" 
		    	android:baselineAligned="false" android:isScrollContainer="true" 
		    	android:layout_width="fill_parent" android:layout_height="wrap_content">
		        <!--Participant Edit box-->
		        <TextView 
		        	android:layout_weight="1" 
		        	android:layout_gravity="center_vertical" 
		        	android:id="@+id/textViewAppointmentEditParticipant" 
		        	android:text="Participant" 
		        	android:layout_width="fill_parent" 
		        	android:layout_height="fill_parent"></TextView>
		        <EditText android:singleLine="true" android:textSize="20px" android:layout_weight="1" android:id="@+id/editTextAppointmentEditParticipant" android:layout_width="fill_parent" android:layout_gravity="top" android:layout_height="fill_parent"></EditText>
		        
		        <!--Location Edit box-->
		        <TextView 
		        	android:layout_weight="1" 
		        	android:layout_gravity="center_vertical" 
		        	android:id="@+id/textViewAppointmentEditLocation" 
		        	android:text="Location" 
		        	android:layout_width="fill_parent" 
		        	android:layout_height="fill_parent"></TextView>
		        <EditText android:textSize="20px" android:layout_width="fill_parent" android:singleLine="true" android:layout_height="fill_parent" android:layout_weight="1" android:id="@+id/editTextAppointmentEditLocation">
		            <requestFocus></requestFocus>
		        </EditText>
		    </LinearLayout>
		    
			<!--Starttime and Finishtime Edit box-->
			<!--Starttime Edit box
				<yyyy mm dd hh mm> -->

		    <TextView 
		    	android:id="@+id/textViewAppointmentEditStarttime"
				android:text="Start"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				 />
			
			<Button android:id="@+id/buttonStartDate" 
				android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:onClick="onStartDateClick"></Button>
			<Button android:id="@+id/buttonStartTime" 
				android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:onClick="onStartTimeClick"></Button>
			
		    <!-- End time Edit box yyyy mm dd hh mm -->
		    <TextView 
		    	android:id="@+id/textViewAppointmentEditFinishtime"
				android:layout_width="fill_parent" 
				android:text="End"
				android:layout_height="wrap_content"></TextView>
			
			<Button android:id="@+id/buttonEndDate" 
				android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:onClick="onEndDateClick"></Button>
			<Button android:id="@+id/buttonEndTime" 
				android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:onClick="onEndTimeClick"></Button>
			
			<!-- Repeat check -->
		    <TextView 
		    	android:layout_width="fill_parent" android:layout_height="wrap_content"
		    	android:text="@string/RepeatAppointment"></TextView>

	    	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
				<RadioGroup android:id="@+id/radioGroupRepeat" android:layout_width="wrap_content" 
						android:layout_height="wrap_content" android:orientation="horizontal">
			        <RadioButton android:id="@+id/radioNoRepeat" android:text="@string/RepeatNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true"></RadioButton>
			        <RadioButton android:id="@+id/radioYearly" android:text="@string/RepeatYearly" android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
			        <RadioButton android:id="@+id/radioMonthly" android:text="@string/RepeatMonthly" android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
			        <RadioButton android:id="@+id/radioDaily" android:text="@string/RepeatDaily" android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
		    	</RadioGroup>
	    	</LinearLayout>
			
			<!--Description Edit box-->
		    <TextView 
		    	android:id="@+id/textViewAppointmentEditDescription" 
		    	android:layout_width="fill_parent" android:layout_height="wrap_content"
		    	android:text="@string/Description"></TextView>
		    
		    <EditText 
		    	android:id="@+id/editTextAppointmentEditDescription"
		    	android:layout_width="fill_parent"
		    	android:textSize="20px"
		    	android:text="" 
		    	android:singleLine="false" 
		    	android:scrollHorizontally="true" 
		    	android:isScrollContainer="true" 
		    	android:layout_height="200dip"
		    	/>
  		</LinearLayout>
  	</ScrollView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="50dip">
        <Button android:text="Save" android:id="@+id/buttonSaveAppointment" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:onClick="onClick"></Button>
        <Button android:text="Cancel" android:id="@+id/buttonCancelAndCloseAppointment" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:onClick="onClick"></Button>
    </LinearLayout>
</LinearLayout>
